--- a/tweet/static/styles.css
+++ b/tweet/static/styles.css
@@ -289,3 +289,20 @@ padding: 5px 10px 10px 5px;
     font-size: 15px;
     font-weight: bold;
 }
+
+ .home .my-icon{
+    width: 50%;
+    border-radius: 10px;
+    margin-bottom: 15px;
+    border: 1px solid rgb(197, 199, 201);
+}
+
+body {
+    margin: 0;
+    font-family: aerial;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #212529;
+    background-color: #fff;
+}
